htick 0.03
----------



htick 0.02
(released on Tue Nov 09 09:23:00 CEST 1999)
----------

----- cvs ci ------
Sun Nov 07 15:30:00 1999
georgi:
+ Added support fowrardPkts for TIC

----- cvs ci ------
Thu Oct 16 13:40:00 MET DST 1999
sms:
- reorganized Makefiles, please read README.Makefiles in the husky-common
  package!

----- cvs ci ------	
Wed Oct 13 09:27:01 CEST 1999 
mtt:
- fixed typo

----- cvs ci ------
Thu Aug 11 22:02:14 NOVST 1999
max:
* win32 porting

----- cvs ci ------
Thu Aug 05 13:40:05 1999
Georgi:
* bugfix in %resend

Sat Jul 31 00:44:05 1999
Georgi:
* Added "-lw <level>" and "-lr <level>" in filearea options

----- cvs ci ------
Sun Jul 25 21:17:54 NOVST 1999
max:
* small bugfix (if no passFileAreaDir in config -> core dump)

Sun Jul 25 21:11:45 1999
Georgi:
* change in "htick filelist"

Sat Jul 24 10:01:25 1999
Georgi:
* security check for %resend
* bugfix if in TIC file write in lowercase

Thu Jul 22 11:39:46 1999
Georgi:
* bugfix in move from .htk dir

Tue Jul 20 14:32:20 1999
Georgi:
+ FileFix now support %resend
+ Added "htick send"

Tue Jul 20 01:15:25 1999
Georgi:
* small bugfix in "htick filelist"

Sun Jul 18 22:41:05 1999
Georgi:
+ support Passthrough fileareas

Thu Jul 16  20:57:45
Georgi:
* FileFix now support mask
* post announce about new files in ReportTo or announceArea (from command string)
* bugfix if not define -r and/or -w in filearea option

Wed Jul 15  19:23:54
Georgi:
* bugfix in toss
* small change FileFix

Wed Jul 14  20:48:50
Georgi:
* bugfix if link is busy
* small change FileFix
* small bugfix in write file in files.bbs

Sun Jul 11  12:27:35
Georgi:
* small bugfix with recoding in posting announce and FileFix
* posting about new files in echoarea ("htick <toss | hatch> [announce <area>"])
+ "htick hatch ... [replace]" - fill replace field in TIC
+ support -h and -manual in area option

Mon Jul  5 22:39:33 NOVST 1999
max:
* small bugfix in recode.c

----- cvs ci ------
Thu Jul  1  15:30:55
Georgi: